Fix personal description word wrap

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -14,7 +14,7 @@ div.tooltip.badge-tooltip {
     margin-bottom: 5px; color: #ddab76; border-bottom: 2px solid #ddab76; text-transform: uppercase;
     font-weight: bold;
   }
-  &>div:last-child > p { display: inline; margin: 0; }
+  &>div:last-child > p { display: inline; margin: 0; word-wrap: break-word; }
 }
 
 #users-list-soul, #pm-users-list-container, #pm-add-users-list-container, #town-add-users-list-container {
